# TRADER

./: .coveragerc  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  BREAKTHROUGH_60_PERCENT_PROGRESS_REPORT.md  BREAKTHROUGH_60_PERCENT_STRATEGY.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DEV_ENVIRONMENT.md  Dockerfile.dev  Dockerfile.test  Makefile  PROJECT_STATUS_REPORT.md  README.md  RISK_MONITORING_SYSTEM_COMPLETION.md  TEST_SUMMARY.md  dev_config.json  dev_server.py  docker-compose.yml  fix_logger_calls.py  main.py  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  server.py  simple_test_logger.py  start_dev.bat  start_dev.py  start_dev.sh  test_dev_env.py  test_logger.py  test_results.md  test_system_comprehensive.py  test_verbose_logger.py  timeplan.md  todo.md
.claude/prompts/: CryptoQuantResearcher.md  QuantSystemPM.md  backend_engineer.md  designer.md  frontend_developer.md  fullstack_engineer.md  product_manager.md  smart_contract_engineer.md  test_engineer.md
.github/workflows/: ci.yml  release.yml
benches/: backtest_benchmarks.rs  factor_benchmarks.rs
cli_validation/: __init__.py  cli_tester.py
cli_validation/validators/: __init__.py  database_test.py  fastapi_test.py  integration_test.py  python_layer_test.py  rust_engine_test.py
coinglass_副本/: .gitignore  QUICK_START_4H_COLLECTION.md  README.md  env.example  package-lock.json  package.json
coinglass_副本/docs/: DATABASE_DESIGN.md  FINAL_REPORT.md  PROJECT_COMPLETION_REPORT.md  SHORT_TERM_OPTIMIZATIONS_IMPLEMENTED.md  USAGE_EXAMPLES.md
coinglass_副本/scripts/: init-database.js
coinglass_副本/src/: index.js  test-api.js
coinglass_副本/tools/: test-1h-api.js
config/: bloomberg_theme.py  ctbench_config.json  local.json  logger_factory.py  logging_config.json  settings.py
config/clickhouse/: config.xml  users.xml
config/environment/: requirements.txt  requirements_ctbench.txt
config/nginx/: nginx.conf
config/postgres/: postgresql.conf
config/production/: production_config.py
config/prometheus/: prometheus.yml
core/: ai_engine.py  ai_trading_engine.py  app.py  coinglass_analyzer.py  coinglass_client.py  coinglass_collector.py  coinglass_data_migrator.py  data_manager.py  data_validator.py  database_optimizer.py  debug_utils.py  enhanced_cache_manager.py  enhanced_logger.py  enhanced_websocket_client.py  high_availability_manager.py  historical_data_fetcher.py  intelligent_data_cleaner.py  market_simulator.py  n8n_workflow_manager.py  optimized_data_pipeline.py  performance_analyzer.py  real_data_manager.py  risk_manager.py  strategy_engine.py  trading_simulator.py  unified_logger.py  verbose_logger.py  websocket_client.py
core/agents/: agent_communication.py  base_agent.py  coordinator_agent.py  execution_agent.py  risk_agent.py  strategy_agent.py
core/backtest/: __init__.py  backtest_engine.py  data_replay_system.py  order_matching_engine.py  portfolio_manager.py  trading_environment.py
core/error_handling/: error_boundaries.py
core/feature_engineering/: enhanced_quantum_factor_system.py  factor_evaluation_system.py  quantum_factor_engine.py
core/reinforcement_learning/: enhanced_rl_manager.py  (+2 more)
ctbench/: __init__.py
docs/: LOGGER_USAGE.md  VERBOSE_LOGGING_GUIDE.md
logging/: structured_logger.py
monitoring/: system_health_monitor.py
python_layer/: __init__.py
rust-engine/: Cargo.toml  pyproject.toml
rust-engine/benches/: factor_benchmarks.rs
rust-engine/python/quant_engine/: __init__.py
rust-engine/python/tests/: test_indicators.py
rust-engine/src/: lib.rs  python_bindings.rs
rust-engine/src/backtest/: mod.rs
rust-engine/src/factors/: fundamental.rs  mod.rs  statistical.rs  technical.rs
rust-engine/src/utils/: mod.rs
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs
rust_engine/src/data_processor/: mod.rs
rust_engine/src/risk/: mod.rs
rust_engine/src/strategy/: mod.rs
rust_engine/src/utils/: alpha_factors.rs  indicators.rs  mod.rs
screens/: __init__.py  ai_assistant.py  dashboard.py  factor_lab.py  strategy_manager.py
scripts/: ai_factor_ctbench_demo.py  deploy_production.sh  dev-setup.sh  setup_local.py  start_cli.py  start_ctbench_service.py  start_data_laboratory.py  start_server.py  start_trading_system.py
testing/: integration_validator.py
tests/: conftest.py  pytest.ini
utils/: logger.py
(+305 files in other folders)
