[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quant-engine"
version = "0.1.0"
description = "高性能量化分析引擎"
authors = [{name = "QuantAnalyzer Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/quantanalyzer/quant-engine"
Repository = "https://github.com/quantanalyzer/quant-engine.git"
Documentation = "https://quantanalyzer.github.io/quant-engine/"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=3.4.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[tool.maturin]
python-source = "python"
module-name = "quant_engine._core"